# language_atomics_metagraph

./: README.md  main.py  pyproject.toml  requirements.txt
config/: cor.ini
data/: .gitignore  README.md
data/databases/: .gitkeep
data/raw/: sampled_text.txt
examples/: nlp_pipeline_frankenstein.py  nlp_pipeline_sampled_text.py
samples/: README.md  nlp_pipeline_frankenstein.py  nlp_pipeline_frankenstein_coref.py  nlp_pipeline_sampled_text.py  nlp_usage_examples.py  visualize_from_database.py
src/cor/knowledge/: Concept.py  Conception.py  Knowledge.py  Language.py
src/cor/metagraph/: MetaGraph.py  MetaGraphDatabase.py
src/core/utilities/: GraphDatabase.py  InvertedIndex.py  MultiTableActiveObject.py  TransactionalDatabase.py  Tree.py
src/nlp/: README.md  __init__.py
src/nlp/extraction/: SRLExtractor.py  SRLExtractorOLD.py  __init__.py  srl_extractor.py
src/nlp/pipeline/: KnowledgePipeline.py  __init__.py  knowledge_pipeline.py
src/nlp/preprocessing/: CoreferenceResolver.py  TextCleaner.py  __init__.py
src/nlp/visualization/: GraphBuilder.py  __init__.py  graph_builder.py
templates/: cleardb.py  graph.s3db
tests/cor/knowledge/: graph.s3db  kviz.py  test_Concept.py  test_Conception.py  test_Knowledge.py  test_Language.py
tests/nlp/: art_of_war_knowledge_graph.html  art_of_war_sun_tzu.txt  database_knowledge_graph.html  db_frankenstein.s3db  frankenstein_knowledge_graph.html  graph.s3db  knowledge_graph.html  test_nlp.py  test_nlp_pipeline.py  test_spacy.py  test_srl_extractor.py  test_text_cleaner.py
tests/nlp/outdated/: test_spacy_cleaned.py  (+2 more)
(+1 files in other folders)
