[project]
name = "language-atomics-metagraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "networkx>=3.6",
    "nltk>=3.9.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pip>=25.3",
    "pyvis>=0.3.2",
    "setuptools>=80.9.0",
    "spacy>=3.8.11",
    "wheel>=0.45.1",
]
